fix product features z-index, fix investors video src

--- a/less/style.less
+++ b/less/style.less
@@ -652,6 +652,7 @@
     --t-feature-in: 0.4s;
     --t-feature-out: 0.25s;
 }
+.product-features {position: relative; z-index: 1;}
 .product-features__grid {position: relative; margin: -1px 0;}
 .product-features__cell {padding: 1px; height: var(--feature-cell-height-outer);}
 .product-features__item-wrap { }
